--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
-<head>
-    {{ page.title }}
-</head>
-<body>
-{{ content }}
-</body>
+<html lang="ru">
+    <head>
+        <title>{{ page.title }}</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="css/style.css" rel="stylesheet">
+    </head>
+    <body>
+        {{ content }}
+    </body>
 </html>
