--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
         <title>{{ page.title }}</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css"
+              href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300">
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
