Title with home link.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,12 @@
         <link href="/css/style.css" rel="stylesheet">
     </head>
     <body>
+        <div class="site">
+            <div class="title">
+                <a href="/">AE</a>
+                <a class="extra" href="/">HOME</a>
+            </div>
+        </div>
         {{ content }}
     </body>
 </html>
