Change title and remove home extra link.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,7 @@
     <body>
         <div class="site">
             <div class="title">
-                <a href="/">AE</a>
-                <a class="extra" href="/">HOME</a>
+                <a href="/">4174</a>
             </div>
         </div>
         {{ content }}
