--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,11 @@
 ---
 layout: default
 ---
+
+{{ page.title }}
+================
+{{ page.date | date: "%Y-%m-%d" }}
+
 <div id="post">
 {{ content }}
 </div>
