--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,19 +2,23 @@
 layout: default
 ---
 
-{{ page.title }}
-================
-{{ page.date | date: "%Y-%m-%d" }}
+<div id="title">
+    {{ page.title }}
+</div>
+
+<div id="pagedate">
+    {{ page.date | date: "%Y-%m-%d" }}
+</div>
 
 <div id="post">
-{{ content }}
+    {{ content }}
 </div>
 
 <div id="related">
-  <h2>Related Posts</h2>
-  <ul class="posts">
-    {% for post in site.related_posts limit:3 %}
-      <li><span>{{ post.date | date: "%Y-%m-%d" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+    <h2>Related Posts</h2>
+    <ul class="posts">
+        {% for post in site.related_posts limit:3 %}
+            <li><span>{{ post.date | date: "%Y-%m-%d" }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+        {% endfor %}
+    </ul>
 </div>
